data/all_generated_tests/raw_wast_tests/nop_StackCorruption_133.wast
;; 4. **Test Description**:     Create a series of `call` instructions to different WebAssembly functions, ensuring `nop` instructions are placed immediately before and after each call. Verify the stack's state remains correct and uncorrupted.    **Constraint**: `nop` must not impact function call stack operations.    **Reasoning**: Checks if `nop` affects stack frames for `call` instructions, leading to potential stack corruption.

(assert_invalid
  (module
    (func $callee (result i32) (i32.const 42))
    (func $caller
      (nop)
      (call $callee)
      (nop)
      (drop)
    )
  )
  "type mismatch"
)